fixed zindex on mobile navbar

--- a/frontend/src/css/components/navbar.css
+++ b/frontend/src/css/components/navbar.css
@@ -25,8 +25,8 @@
 
 .menuIcon {
   display: none;
-  height: 60px;
-  width: 60px;
+  height: 45px;
+  width: 45px;
 }
 
 .nav-elements ul {
@@ -88,6 +88,7 @@
     width: 0px;
     transition: all 0.2s ease-in;
     overflow: hidden;
+    z-index: 1;
   }
 
   .nav-elements.active {
